--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
             - name: Setup nodeJs
               uses: actions/setup-node@v4
               with:
-                node-version: "21"
+                node-version: '21'
+           
+            - name: Check node version
+              run: node --version
             
            
