--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ on:
 
 jobs:
     build-and-test:
-        runs-on: ubuntu latest
+        runs-on: ubuntu-latest
         steps:
             - name: Setup nodeJs
               uses: actions/setup-node@v4
               with:
-                node-version: '21'
+                node-version: '20'
            
             - name: Check node version
               run: node --version
