--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,8 @@ jobs:
            
             - name: Check node version
               run: node --version
+
+            - name: Clone the repository
+              uses: actions/checkout@v2
             
            
