--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,8 @@ jobs:
 
             - name: "Install dependencies"
               run:  npm install
+
+            - name: "List depositories"
+              run:  ls
             
            
