--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,10 @@ jobs:
 
             - name: "List depositories"
               run:  ls
+
+            - name: "Run test"
+              run:  npm test
             
+            - name: "Run build"
+              run:   npm run build
            
