--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,11 @@ jobs:
             - name: "Run build"
               run:   npm run build
 
+            - name: "Upload production ready build files"
+              uses:  actions/upload-artifact@v4
+              with:
+                  name: build
+                  path: dist
+
             
            
